--- a/Scripts/Multiple.Rpathruns.Rmd
+++ b/Scripts/Multiple.Rpathruns.Rmd
@@ -298,7 +298,7 @@ noncomm_value_500
 ```{r}
 #High diet proportion
 sum_2_1 <- sum_data_6 %>% filter(spp %in% diet_over_0.05) %>% rename(species= "spp") %>% left_join(Predator_value, by= "species")
-sum_2_1[5,12] <- "Neither"
+sum_2_1[5,13] <- "Neither"
 sum_2_1$Value <- factor(sum_2_1$Value, levels = c("Commercial", "Non-commercial", "Both", "Neither"))
 sum_2_1_graph <- sum_2_1 %>% ggplot(aes(col= Value)) + 
   geom_pointrange(aes(y=reorder(species, desc(species)), x=median_biomass, xmin=quant_2.5, xmax= quant_97.5), size=0.5, shape=22, fill= "white") + 
@@ -339,17 +339,17 @@ sum_2_3_graph
 
 high_diet_plot <- ggarrange(change_2_1_plot + rremove("xlab") + rremove("ylab"), change_1_1_plot + rremove("xlab") + rremove("ylab"), common.legend = TRUE, legend= "right", labels= c("a", "b", "c"), sum_2_1_graph + rremove("xlab") + rremove("ylab"), ncol = 3, nrow = 1)
 
-annotate_figure(high_diet_plot, bottom= text_grob("Relative biomass", size=14), left= text_grob("Species with high diet proportion", size=14, rot=90)) + 
+annotate_figure(high_diet_plot, bottom= text_grob("Relative end biomass", size=14), left= text_grob("Species with high diet proportion", size=14, rot=90)) + 
 ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.Manuscript/Images/Sub.2/high.diet.combo.jpeg", dpi=600)
 
 low_diet_plot <- ggarrange(change_2_2_plot + rremove("xlab") + rremove("ylab") + rremove("legend"), change_1_2_plot + rremove("xlab") + rremove("ylab") + rremove("legend"), common.legend = TRUE, legend= "right", labels= c("a", "b", "c"), sum_2_2_graph + rremove("xlab") + rremove("ylab"), ncol = 3, nrow = 1)
 
-annotate_figure(low_diet_plot, bottom= text_grob("Relative biomass", size=14), left= text_grob("Species with low diet proportion", size=14, rot=90)) + 
+annotate_figure(low_diet_plot, bottom= text_grob("Relative end biomass", size=14), left= text_grob("Species with low diet proportion", size=14, rot=90)) + 
 ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.Manuscript/Images/Sub.2/low.diet.combo.jpeg", dpi=600)
 
 no_diet_plot <- ggarrange(change_2_3_plot + rremove("xlab") + rremove("ylab"), change_1_3_plot + rremove("xlab") + rremove("ylab"), sum_2_3_graph + rremove("xlab") + rremove("ylab"), ncol = 3, nrow = 1, labels= c("a", "b", "c"))
 
-annotate_figure(no_diet_plot, bottom= text_grob("Relative biomass", size=14), left= text_grob("Species with no diet proportion", size=14, rot=90)) + 
+annotate_figure(no_diet_plot, bottom= text_grob("Relative end biomass", size=14), left= text_grob("Species with no diet proportion", size=14, rot=90)) + 
 ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.Manuscript/Images/Sub.2/no.diet.combo.jpeg", dpi=600)
 ```
 
