--- a/Scripts/OTZ.results.manuscript .Rmd
+++ b/Scripts/OTZ.results.manuscript .Rmd
@@ -348,25 +348,25 @@ data_2_low$Value <- factor(data_2_low$Value, levels = c("Commercial", "Non-comme
 
 plot1_high_diet <- data_1_high %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp, linetype= Value)) + 
   xlab("Month") + ylab("Relative biomass") + scale_x_continuous(name= "Year", breaks= c(0, 120, 240, 360, 480, 600), labels= c("2001", "2010", "2020", "2030", "2040", "2050")) + 
-scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Albacore" = "Albacore", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Lingcod"= "Lingcod", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish")) + labs(colour= "Species with high diet proportion", title= "A") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Classification",values=c("Commercial"= 1, "Non-commercial"=2,"Both"=3, "Neither"=4)) + 
+scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Albacore" = "Albacore", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Lingcod"= "Lingcod", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish")) + labs(colour= "Species with high diet proportion", title= "c") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Classification",values=c("Commercial"= 1, "Non-commercial"=2,"Both"=3, "Neither"=4)) + 
 ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/high.diet.50.jpeg", dpi=600)
 plot1_high_diet
 
 plot2_high_diet <- data_2_high %>% filter(spp %in% diet_over_0.05) %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp, linetype= Value)) + 
 xlab("Month") + ylab("Relative biomass") + scale_x_continuous(name= "Year", breaks= c(0, 120, 240, 360, 480, 600), labels= c("2001", "2010", "2020", "2030", "2040", "2050")) + 
-scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Albacore" = "Albacore", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Lingcod"= "Lingcod", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Juv. Ele. Seal" = "Juv n. elephant seal")) + labs(colour= "Species with high diet proportion", title= "B") + labs(colour= "Species with high diet proportion") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Classification",values=c("Commercial"= 1, "Non-commercial"=2,"Both"=3, "Neither"=4)) + 
+scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Albacore" = "Albacore", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Lingcod"= "Lingcod", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Juv. Ele. Seal" = "Juv n. elephant seal")) + labs(colour= "Species with high diet proportion", title= "a") + labs(colour= "Species with high diet proportion") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Classification",values=c("Commercial"= 1, "Non-commercial"=2,"Both"=3, "Neither"=4)) + 
 ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/high.diet.25.jpeg", dpi=600)
 plot2_high_diet
 
 plot1_low_diet <- data_1_edt %>% filter(spp %in% diet_under_0.05) %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp, linetype= Value)) + 
   xlab("Month") + ylab("Relative biomass") + scale_x_continuous(name= "Year", breaks= c(0, 120, 240, 360, 480, 600), labels= c("2001", "2010", "2020", "2030", "2040", "2050")) + 
-scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish", "Juv. Ele. Seal"= "Juv. n. elephant seal")) + labs(colour= "Species with low diet proportion") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Classification",values=c("Non-commercial"=2,"Both"=3)) + 
+scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish", "Juv. Ele. Seal"= "Juv. n. elephant seal")) + labs(colour= "Species with low diet proportion", title= "d") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Classification",values=c("Non-commercial"=2,"Both"=3)) + 
 ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/low.diet.50.jpeg", dpi=600)
 plot1_low_diet
 
 plot2_low_diet <- data_2_edt %>% filter(spp %in% diet_under_0.05) %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp, linetype= Value)) + 
 xlab("Month") + ylab("Relative biomass") + scale_x_continuous(name= "Year", breaks= c(0, 120, 240, 360, 480, 600), labels= c("2001", "2010", "2020", "2030", "2040", "2050")) + 
-scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish", "Juv. Ele. Seal"= "Juv. n. elephant seal")) + labs(colour= "Species with low diet proportion") + standard_theme + geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Classification",values=c("Non-commercial"=2,"Both"=3)) + ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/low.diet.25.jpeg", dpi=600)
+scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish", "Juv. Ele. Seal"= "Juv. n. elephant seal")) + labs(colour= "Species with low diet proportion", title= "b") + standard_theme + geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Classification",values=c("Non-commercial"=2,"Both"=3)) + ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/low.diet.25.jpeg", dpi=600)
 
 #combo_ts_low_diet <- ggarrange(plot1_low_diet + rremove("xlab") + rremove("ylab"), plot2_low_diet + rremove("xlab") + rremove("ylab"), ncol = 2, nrow = 1)
 
